--- a/source/layouts/_head.haml
+++ b/source/layouts/_head.haml
@@ -11,7 +11,8 @@
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     %meta{:content => "Ruby enthusiasts, mostly based in Kansas City, KS, USA.", :name => "description"}/
 
-    %link{:href => "http://fonts.googleapis.com/css?family=Open+Sans:800,400,300", :rel => "stylesheet", :type => "text/css"}/
     / Le HTML5 shim, for IE6-8 support of HTML5 elements
     /[if lt IE 9]
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+
+= partial 'layouts/navbar'
