--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -2,6 +2,24 @@
 title: Databasically
 ---
 -# %section#masthead
+%contact
+  %h1 Hello There.
+  / CONTACT
+  .row
+    / MAP
+    / #map.container.hidden-phone
+
+
+%h3 Latest Content
+.list-group
+  - page_articles[0,8].each_with_index do |article, i|
+    %a.list-group-item{:href => article.url}
+      %h4.list-group-item-heading
+        = article.title
+      %p.list-group-item-text
+        = article.date.strftime('%b %e %Y')
+
+
 
 
 / EXPERTISE
@@ -108,20 +126,3 @@ title: Databasically
 / CONTACT
 
 -# %section#contact
-%contact
-  %h1 Hello There.
-  / CONTACT
-  .row
-    / MAP
-    / #map.container.hidden-phone
-
-- page_articles[0,8].each_with_index do |article, i|
-  .row
-    .span2.muted= article.date.strftime('%b %e %Y')
-    .span10= link_to article.title, article
-
--# :javascript
--#   $("ul.nav li a[href^='#']").on('click', function(e) {
--#    e.preventDefault();
--#    $('html, body').animate({ scrollTop: $(this.hash).offset().top }, 300);
--#   });
