--- a/source/articles.html.haml
+++ b/source/articles.html.haml
@@ -4,7 +4,10 @@ layout: article
 %h2
   Archive
 
-- page_articles.each_with_index do |article, i|
-  .row
-    .span2.muted= article.date.strftime('%b %e %Y')
-    .span10= link_to article.title, article
+.list-group
+  - page_articles[0,8].each_with_index do |article, i|
+    %a.list-group-item{:href => article.url}
+      %h4.list-group-item-heading
+        = article.title
+      %p.list-group-item-text
+        = article.date.strftime('%b %e %Y')
