jquery from cdn

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -22,7 +22,7 @@ title: Databasically
 
 
 
-/ EXPERTISE
+-# / EXPERTISE
 -# %section#expert
 -#   %h1 What's in it for you.
 -#   .row.do
@@ -43,7 +43,7 @@ title: Databasically
 -#         and
 -#         = succeed '.' do
 -#           %a{:href => "http://meetup.com/kcruby"} KC Ruby meetup
-/ PORTFOLIO
+-# / PORTFOLIO
 -#  %section#work
 -#    %h1 Our Work.
 -#    %nav.primary.m-btn-group.toggle-buttons.clearfix
@@ -108,7 +108,7 @@ title: Databasically
 -#       %h4 Wes Garrison
 -#       %p Published his first Ruby on Rails application in 2005. The client loved -# it so much that we continue to actively develop it to this day.
 -#
-/ PROCESS
+-# / PROCESS
 -# %section#process
 -#   %h1 No fancy graphics.
 -#   %h2 Just substance.
@@ -122,7 +122,7 @@ title: Databasically
 -#       %p This is where our strength really starts to shine. We write code that -# is easy to maintain so you spend less money over the lifetime of your -# project.
 -#       %h3 Deploy
 -#       %p We put new code on the server early and often, that way you can play around with it and so we can work together to discover new requirements.
-/ end PROCESS
-/ CONTACT
+-# / end PROCESS
+-# / CONTACT
 
 -# %section#contact
