Add sitemap to footer

--- a/source/layouts/_footer.haml
+++ b/source/layouts/_footer.haml
@@ -4,6 +4,9 @@
       %p
         Established 2005 &middot; Databasically &copy;
         = Time.now.year
+  .row
+    %p.small.pull-right
+      =link_to 'sitemap', '/sitemap.xml'
 
 
 = partial 'layouts/google_analytics'
