--- a/source/layouts/_navbar.haml
+++ b/source/layouts/_navbar.haml
@@ -16,6 +16,8 @@
             %span.sr-only (current)
         %li
           %a{:href => "/articles"} Articles
+        %li
+          %a{:href => "/railsconf2016"} Railsconf 2016 Events
 
 
       %form.navbar-form.navbar-right{:role => "search", :action => "https://duckduckgo.com/", :method => "get"}
