--- a/source/articles/2012-03-08-bundler-1-1-vs-1-0-install-speedup.html.erb
+++ b/source/articles/2012-03-08-bundler-1-1-vs-1-0-install-speedup.html.erb
@@ -14,7 +14,7 @@ Here are my results, for a project with a brand new empty gemset:
 <% code("ruby") do %>
 $ gem install bundler -v=1.0.18 && time bundle install
 Installing ...
-Your bundle is complete! Use `bundle show [gemname]` to see where a bundled gem is installed.
+Your bundle is complete! Use 'bundle show [gemname]' to see where a bundled gem is installed.
 
 real	48.174s
 user	38.411s
@@ -24,7 +24,7 @@ $ gem install bundler -v=1.1.0 && time bundle install
 Fetching gem metadata from http://rubygems.org/.......
 Fetching gem metadata from http://rubygems.org/..
 
-Your bundle is complete! Use `bundle show [gemname]` to see where a bundled gem is installed.
+Your bundle is complete! Use 'bundle show [gemname]' to see where a bundled gem is installed.
 
 real	22.015s
 user	28.377s
