--- a/source/articles/2014-05-13-converting-a-github-issue-to-a-pull-request.html.erb
+++ b/source/articles/2014-05-13-converting-a-github-issue-to-a-pull-request.html.erb
@@ -59,7 +59,7 @@ command = %Q(
        https://api.github.com/repos/#{ORG}/#{REPO}/pulls
   )
 
-puts `#{command}`<% end %>
+puts '#{command}'<% end %>
 
 <h3>Demo (given at KC Ruby)</h3>
 
