--- a/source/articles/2008-11-10-wsus-30-memory-usage-and-how-to-adjust-it.html.erb
+++ b/source/articles/2008-11-10-wsus-30-memory-usage-and-how-to-adjust-it.html.erb
@@ -22,10 +22,10 @@ Microsoft SSEE shows in the services panel as Windows Internal Database, which i
 3> go
 Configuration option ’show advanced options’ changed from 0 to 1.
   Run the RECONFIGURE statement to install.
-1> sp_configure ‘max server memory’, 512;
+1> sp_configure 'max server memory’, 512;
 2> reconfigure;
 3> go
-Configuration option ‘max server memory (MB)’ changed from
+Configuration option 'max server memory (MB)’ changed from
   2147483647 to 512. Run the RECONFIGURE statement to install.
 1> exit</servername><% end %>
 <br><br>
