--- a/source/articles/2009-01-30-templateerror-wrong-number-of-arguments-in-default_url_options.html.erb
+++ b/source/articles/2009-01-30-templateerror-wrong-number-of-arguments-in-default_url_options.html.erb
@@ -11,8 +11,8 @@ During an app upgrade to Rails 2.2.2, I came across this error that baffled me f
 34: &lt;%= link_to 'My Dashboard', my_dashboard_url &gt;<% end %>
 <br><br>
 Checking out the backtrace:
-<% code("ruby") do %>(eval):3:in `default_url_options'
-(eval):3:in `my_dashboard_url'
+<% code("ruby") do %>(eval):3:in 'default_url_options'
+(eval):3:in 'my_dashboard_url'
 app/views/account/_dashboard_header.rhtml:34<% end %>
 <br><br>
 Confusing.  Why would this named route suddenly stop working?  I did a search for default_url_options and found that I had overridden that function:
