--- a/source/articles/2010-03-05-installing-sqlite-headers-on-ubuntu-sqlite3-h-not-found.html.erb
+++ b/source/articles/2010-03-05-installing-sqlite-headers-on-ubuntu-sqlite3-h-not-found.html.erb
@@ -7,11 +7,11 @@ I was setting up <a href="http://integrityapp.com/">Integrity</a> for the first 
 
 <% code("ruby") do %>~$ bundle install
 ...
-Installing do_sqlite3 (0.10.0) from rubygems repository at 
-  http://gemcutter.org/ with native extensions 
-  /usr/local/lib/site_ruby/1.8/rubygems/installer.rb:482:in 
-  `build_extensions': 
-ERROR: Failed to build gem native extension. 
+Installing do_sqlite3 (0.10.0) from rubygems repository at
+  http://gemcutter.org/ with native extensions
+  /usr/local/lib/site_ruby/1.8/rubygems/installer.rb:482:in
+  'build_extensions':
+ERROR: Failed to build gem native extension.
   (Gem::Installer::ExtensionBuildError)
 
 /usr/bin/ruby1.8 extconf.rb
