--- a/source/articles/2010-11-08-gettings-started-with-custom-rails3-validators.html.erb
+++ b/source/articles/2010-11-08-gettings-started-with-custom-rails3-validators.html.erb
@@ -34,7 +34,7 @@ For the purpose of example, we're going to implement a validator to check the va
 Create the file "email_pattern_validator.rb" under your lib/validators directory and add the following code to it:
 <% code("ruby") do %>class EmailPatternValidator &lt; ActiveModel::EachValidator
   def validate_each(record, attribute, value)
-    if value.nil? || !value.match(/^([\w\!\#$\%\&amp;\'\*\+\-\/\=\?\^\`{\|\}\~]+\.)*[\w\!\#$\%\&amp;\'\*\+\-\/\=\?\^\`{\|\}\~]+@((((([a-z0-9]{1}[a-z0-9\-]{0,62}[a-z0-9]{1})|[a-z])\.)+[a-z]{2,6})|(\d{1,3}\.){3}\d{1,3}(\:\d{1,5})?)$/i)
+    if value.nil? || !value.match(/^([\w\!\#$\%\&amp;\'\*\+\-\/\=\?\^\'{\|\}\~]+\.)*[\w\!\#$\%\&amp;\'\*\+\-\/\=\?\^\'{\|\}\~]+@((((([a-z0-9]{1}[a-z0-9\-]{0,62}[a-z0-9]{1})|[a-z])\.)+[a-z]{2,6})|(\d{1,3}\.){3}\d{1,3}(\:\d{1,5})?)$/i)
       record.errors[attribute] &lt;&lt; "Not a valid email address"
     end
   end
