--- a/source/railsconf2016/index.haml
+++ b/source/railsconf2016/index.haml
@@ -17,10 +17,6 @@ post_date: 2016-03-22
 
 %ul
   %li
-    First, get on the mailing list.  Check your email for a confirmation!
-    = partial :mailchimp
-
-  %li
     Follow
     = link_to '@wesgarrison', 'https://twitter.com/wesgarrison'
     for more timely updates as we get closer.
@@ -28,9 +24,13 @@ post_date: 2016-03-22
   %li
     Send suggestions to
     = link_to '@wesgarrison', 'https://twitter.com/wesgarrison'
-  %li Fill out the form with events you are interested in.
   %li For popular events, I'll send out specific arrangements, ticket details, transportation.
   %li For general attractions, I'll help coordinate and connect interested parties.
+  %li
+    Get on the mailing list for each event.  Check your email for a confirmation!
+
+= partial :mailchimp
+
 
 Events with specific times and/or reservation requirements are first.
 %br
