--- a/source/layouts/_head.haml
+++ b/source/layouts/_head.haml
@@ -15,4 +15,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     = javascript_include_tag "all"
 
+    = partial 'layouts/mailchimp_formats'
+
 = partial 'layouts/navbar'
