--- a/source/railsconf2016/index.haml
+++ b/source/railsconf2016/index.haml
@@ -24,7 +24,7 @@ post_date: 2016-03-22
   %li
     Send suggestions to
     = link_to '@wesgarrison', 'https://twitter.com/wesgarrison'
-  %li For popular events, I'll send out specific arrangements, ticket details, transportation.
+  %li For popular events, I'll send out specific arrangements, ticket details, and transportation plans.
   %li For general attractions, I'll help coordinate and connect interested parties.
   %li
     Get on the mailing list for each event.  Check your email for a confirmation!
