--- a/source/railsconf2016/index.haml
+++ b/source/railsconf2016/index.haml
@@ -48,13 +48,28 @@ We don't have specific times that we need to be at these, but let me know you're
 - data.events.select {|event| event.date == 'May 3'}.each do |event|
   = partial :event, :locals => {event: event}
 
+%h1 Wednesday May 4th Events
+
+- data.events.select {|event| event.date == 'May 4'}.each do |event|
+  = partial :event, :locals => {event: event}
+
+%h1 Thursday May 5th Events
+
+- data.events.select {|event| event.date == 'May 5'}.each do |event|
+  = partial :event, :locals => {event: event}
+
+%h1 Friday May 6th Events
+
+- data.events.select {|event| event.date == 'May 6'}.each do |event|
+  = partial :event, :locals => {event: event}
+
 %h1 Saturday May 7th Events
 
 - data.events.select {|event| event.date == 'May 7'}.each do |event|
   = partial :event, :locals => {event: event}
 
 %h1#other_attractions Other attractions
-- data.events.select {|event| event.date == 'attraction'}.each do |event|
+- data.events.select {|event| event.date == 'Any'}.each do |event|
   = partial :event, :locals => {event: event}
 
 
