Breakout room added

--- a/source/railsconf2016/_mailchimp.erb
+++ b/source/railsconf2016/_mailchimp.erb
@@ -28,6 +28,7 @@
 <li><input type="checkbox" value="16" name="group[19805][16]" id="mce-group[19805]-19805-4"> <label for="mce-group[19805]-19805-4">Dinner</label></li>
 <li><input type="checkbox" value="32" name="group[19805][32]" id="mce-group[19805]-19805-5"> <label for="mce-group[19805]-19805-5">BBQ Tour</label></li>
 <li><input type="checkbox" value="64" name="group[19805][64]" id="mce-group[19805]-19805-6"> <label for="mce-group[19805]-19805-6">Saturday Sightseeing / General Attraction Get Togethers</label></li>
+<li><input type="checkbox" value="64" name="group[19805][256]" id="mce-group[19805]-19805-8"> <label for="mce-group[19805]-19805-8">Live Escape / Breakout Rooms</label></li>
 </ul>
 </div>
   <div id="mce-responses" class="clear">
