Add calendar to top to make finding things easier

--- a/source/articles/2008-11-23-rubygems-error-on-update-undefined-local-variable-or-method-remote_gemspecs.html.erb
+++ b/source/articles/2008-11-23-rubygems-error-on-update-undefined-local-variable-or-method-remote_gemspecs.html.erb
@@ -1,6 +1,6 @@
 ---
 layout: article
-title: ! 'RubyGems error on update: undefined local variable or method 'remote_gemspecs&#039;'
+title: "RubyGems error on update: undefined local variable or method 'remote_gemspecs'"
 post_date: 2008-11-23
 ---
 I updated rubygems:
