--- a/source/railsconf2016/_mailchimp.erb
+++ b/source/railsconf2016/_mailchimp.erb
@@ -18,16 +18,12 @@
   <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
 </div>
 <div class="mc-field-group input-group">
-    <strong>Events: These are separate lists you'll get information from.</strong>
+    <strong>Events: These are lists for things that require more planning and/or prepurchase. </strong>
     <ul>
 <li><input type="checkbox" value="128" name="group[19805][128]" id="mce-group[19805]-19805-7"> <label for="mce-group[19805]-19805-7">All - Send me everything! </label></li>
 <li><input type="checkbox" value="1" name="group[19805][1]" id="mce-group[19805]-19805-0"> <label for="mce-group[19805]-19805-0">KC Royals</label></li>
-<li><input type="checkbox" value="2" name="group[19805][2]" id="mce-group[19805]-19805-1"> <label for="mce-group[19805]-19805-1">Board Games</label></li>
-<li><input type="checkbox" value="4" name="group[19805][4]" id="mce-group[19805]-19805-2"> <label for="mce-group[19805]-19805-2">Boulevard - Free Tour</label></li>
-<li><input type="checkbox" value="8" name="group[19805][8]" id="mce-group[19805]-19805-3"> <label for="mce-group[19805]-19805-3">Boulevard - Smokestack Tour</label></li>
-<li><input type="checkbox" value="16" name="group[19805][16]" id="mce-group[19805]-19805-4"> <label for="mce-group[19805]-19805-4">Dinner</label></li>
-<li><input type="checkbox" value="32" name="group[19805][32]" id="mce-group[19805]-19805-5"> <label for="mce-group[19805]-19805-5">BBQ Tour</label></li>
-<li><input type="checkbox" value="64" name="group[19805][64]" id="mce-group[19805]-19805-6"> <label for="mce-group[19805]-19805-6">Saturday Sightseeing / General Attraction Get Togethers</label></li>
+<li><input type="checkbox" value="4" name="group[19805][4]" id="mce-group[19805]-19805-2"> <label for="mce-group[19805]-19805-2">Boulevard Tours</label></li>
+<li><input type="checkbox" value="32" name="group[19805][32]" id="mce-group[19805]-19805-5"> <label for="mce-group[19805]-19805-5">BBQ Tour (Saturday)</label></li>
 <li><input type="checkbox" value="256" name="group[19805][256]" id="mce-group[19805]-19805-8"> <label for="mce-group[19805]-19805-8">Live Escape / Breakout Rooms</label></li>
 <li><input type="checkbox" value="512" name="group[19805][512]" id="mce-group[19805]-19805-9"> <label for="mce-group[19805]-19805-9">Karaoke</label></li>
 </ul>
